[metadata]
name = torrentstream
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Quick n' dirty torrent streaming with libtorrent and python3.5
description-file = Readme.rst
home-page = https://github.com/XayOn/torrentstream
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only


keywords =
    kickasstorrents

[files]
packages =
    torrentstream

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
